--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ src="https://www.facebook.com/tr?id=762934183503347&ev=PageView&noscript=1"
   </div>
 
   <!-- ✅ BUTTON → redirect.html -->
-  <a class="btn-telegram" href="https://t.me/+wFwLhvCs48s5ZmRl" target="_blank">
+  <a class="btn-telegram" href="https://t.me/addlist/hU6x1EWMovM1NmE1" target="_blank">
     View In Telegram
   </a>
 
