--- a/redirect.html
+++ b/redirect.html
@@ -1,55 +1,210 @@
 <!doctype html>
-<html lang="en">
+<html lang="hi">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Redirecting…</title>
-<meta name="robots" content="noindex,nofollow"/>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>XM Forex Broker</title>
+
 <style>
-  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;padding:24px;background:#001022;color:#e6eefb;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
-  .card{max-width:540px;background:rgba(6,8,15,0.94);padding:20px;border-radius:12px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.6)}
-  .btn{display:inline-block;margin-top:18px;padding:10px 14px;border-radius:10px;background:#ff7a00;color:#fff;text-decoration:none;font-weight:700}
-  .small{color:#bfcfe6;margin-top:8px;font-size:13px}
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+  background:#f2f4f7;
+  padding:14px;
+  color:#111;
+}
+
+.wrap{
+  max-width:420px;
+  margin:auto;
+  background:#fff;
+  border-radius:14px;
+  padding:18px;
+  box-shadow:0 8px 25px rgba(0,0,0,.08);
+  text-align:center;
+}
+
+.top{
+  background:#d6001c;
+  color:#fff;
+  padding:8px;
+  border-radius:10px;
+  font-weight:700;
+  font-size:14px;
+  margin-bottom:14px;
+}
+
+.logo img{
+  width:90px;
+  margin-bottom:10px;
+}
+
+h1{
+  font-size:18px;
+  margin-bottom:6px;
+}
+h1 span{color:#d6001c}
+
+.sub{
+  font-size:13px;
+  font-weight:600;
+  color:#0b6b2e;
+  margin-bottom:10px;
+}
+
+.desc{
+  font-size:13px;
+  color:#333;
+  line-height:1.5;
+  margin-bottom:14px;
+}
+
+.features{
+  text-align:left;
+  font-size:13px;
+  margin-bottom:14px;
+}
+.features li{margin-bottom:6px}
+
+/* XM CTA */
+.cta-xm{
+  display:block;
+  background:#ff9800;
+  color:#fff;
+  padding:14px;
+  border-radius:40px;
+  font-size:16px;
+  font-weight:800;
+  text-decoration:none;
+  margin-bottom:8px;
+}
+
+/* Partner Code */
+.partner{
+  background:#fff3cd;
+  border:1px dashed #ff9800;
+  border-radius:12px;
+  padding:10px;
+  margin-bottom:14px;
+  font-size:13px;
+  font-weight:700;
+}
+
+.code{
+  font-size:18px;
+  color:#d6001c;
+  margin:6px 0;
+}
+
+.copy-btn{
+  width:100%;
+  background:#d6001c;
+  color:#fff;
+  border:none;
+  padding:10px;
+  border-radius:30px;
+  font-size:14px;
+  font-weight:700;
+}
+
+/* Telegram */
+.cta-telegram{
+  display:block;
+  background:#0b7b2b;
+  color:#fff;
+  padding:12px;
+  border-radius:40px;
+  font-size:15px;
+  font-weight:800;
+  text-decoration:none;
+  margin-bottom:12px;
+}
+
+.note{
+  font-size:12px;
+  color:#444;
+  margin-bottom:10px;
+}
+
+.disclaimer{
+  font-size:11px;
+  color:#777;
+  line-height:1.4;
+}
 </style>
 </head>
+
 <body>
-  <div class="card">
-    <div style="font-weight:900;font-size:18px">Preparing your link…</div>
-    <div class="small">This page logs clicks to help prevent fake/click-farm traffic. You'll be redirected shortly.</div>
-    <a id="direct" class="btn" href="#">Open Telegram</a>
-    <div class="small" style="margin-top:12px">If you are not redirected, tap the button above.</div>
+
+<div class="wrap">
+
+  <div class="top">Learn Forex Trading with a Regulated Broker</div>
+
+  <div class="logo">
+    <img src="xm.jpg" alt="XM Broker">
   </div>
 
+  <h1>Start Trading with <span>XM</span></h1>
+
+  <div class="sub">Beginner Friendly • Regulated Broker</div>
+
+  <div class="desc">
+    XM is a globally recognized Forex & CFD broker offering
+    transparent trading conditions.
+  </div>
+
+  <ul class="features">
+    <li>✔ Regulated Forex Broker</li>
+    <li>✔ Low Minimum Deposit</li>
+    <li>✔ MT4 & MT5 Platforms</li>
+    <li>✔ Forex, Gold & Indices</li>
+  </ul>
+
+  <!-- XM CTA -->
+  <a href="https://affs.click/7vdrY"
+     target="_blank"
+     class="cta-xm"
+     onclick="trackXM()">
+     Start Trading with XM
+  </a>
+
+  <!-- Partner Code -->
+  <div class="partner">
+    Use Partner Code (Required)
+    <div class="code" id="code">YF664</div>
+    <button class="copy-btn" onclick="copyCode()">Copy Partner Code</button>
+  </div>
+
+  <!-- Telegram -->
+  <a href="https://t.me/+AUE-hjQP3U0wOWNl"
+     target="_blank"
+     class="cta-telegram">
+     Join Free Telegram Community
+  </a>
+
+  <div class="note">
+    Telegram app users can join instantly
+  </div>
+
+  <div class="disclaimer">
+    Risk Warning: Forex & CFD trading involves risk and may not be suitable
+    for all investors.
+  </div>
+
+</div>
+
 <script>
-(function(){
-  // Map short names to real external links
-  const map = {
-    telegram: "https://telegram.me/+ZVpxPGfP6LFiZDFl"
-  };
-  // Basic logging call - replace with your server endpoint if available
-  function logClick(params){
-    try{
-      // Use navigator.sendBeacon when possible
-      const url = '/.netlify/functions/logClick'; // placeholder if you add a Netlify function
-      const payload = JSON.stringify({ts:Date.now(), params:params, ua:navigator.userAgent});
-      if(navigator.sendBeacon){
-        navigator.sendBeacon(url, payload);
-      }else{
-        fetch(url, {method:'POST',headers:{'Content-Type':'application/json'},body:payload}).catch(()=>{});
-      }
-    }catch(e){}
+function copyCode(){
+  navigator.clipboard.writeText("YF664");
+  document.querySelector(".copy-btn").innerText="Code Copied ✓";
+}
+
+function trackXM(){
+  if(typeof fbq==="function"){
+    fbq('trackCustom','XM_Account_Click');
   }
-
-  const qs = new URLSearchParams(location.search);
-  const to = qs.get('to') || 'telegram';
-  const dest = map[to] || map['telegram'];
-  const direct = document.getElementById('direct');
-  direct.setAttribute('href', dest);
-
-  // Log and redirect after a small delay to discourage bots
-  logClick({to:to, ref:document.referrer});
-  setTimeout(()=>{ window.location.replace(dest); }, 1200);
-})();
+}
 </script>
+
 </body>
 </html>
